correção do CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Curriculo</title><!--alterar futuramente para meu nome, talvez-->
-    <link rel="stylesheet" href="/CSS/estilo.css">
+    <link rel="stylesheet" href="./CSS/estilo.css">
 </head>
 <body>
     <header id="titulo"><!--Aqui vai ter o nome data e a parte da navegação-->
@@ -18,8 +18,8 @@
         <br/>
 
         <nav>
-            |<a href="#1">INICIO</a>|
-            <a href="#">SOBRE</a>|
+            |<a href="#aboutme">INICIO</a>|
+            <a href="#ability">SOBRE</a>|
             <a href="#">HABILIDADES</a>|
             <a href="#">CONTATO</a>|
         </nav>  
