--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         Mim</div>
                 </div>
                 <div id="imagemeu">
-                <img id="ajusteimg" src="/IMG/imagemfoto.png">
+                <img id="ajusteimg" src="./IMG/imagemfoto.png">
                 </div>
             </div>
             <div id="txtaboutme">
@@ -57,7 +57,7 @@
                 <div id="encaixedasdivisorias">
                     <div class="divisao2">
                         <div class="imgability"> 
-                            <img class="imgability" src="/IMG/pexels-divinetechygirl-1181675.jpg">
+                            <img class="imgability" src="./IMG/pexels-divinetechygirl-1181675.jpg">
                         </div>
                         <div class="abilitytxt">
                             <h1 class="abilitytitulo">Tecnológicas</h1>
@@ -74,7 +74,7 @@
                 
                    <div class="divisao2">
                         <div class="imgability">
-                            <img class="imgability" src="/IMG/pexels-hilal-bilir-70588620-32026742.jpg">
+                            <img class="imgability" src="./IMG/pexels-hilal-bilir-70588620-32026742.jpg">
                         </div>
                         <div class="abilitytxt">
                             <h1 class="abilitytitulo">IDIOMAS</h1>
@@ -91,7 +91,7 @@
                 <div id="encaixedasdivisorias">
                     <div class="divisao2">
                         <div class="imgability">
-                            <img class="imgability" src="/IMG/pexels-pixabay-247819.jpg">
+                            <img class="imgability" src="./IMG/pexels-pixabay-247819.jpg">
                         </div>
                         <div class="abilitytxt">
                             <h1 class="abilitytitulo">APRENDIZADO</h1>
@@ -111,7 +111,7 @@
 
                     <div class="divisao2">
                         <div class="imgability">
-                            <img class="imgability" src="/IMG/pexels-artempodrez-5716028.jpg"> 
+                            <img class="imgability" src="./IMG/pexels-artempodrez-5716028.jpg"> 
                         </div>
                         <div class="abilitytxt">
                             <h1 class="abilitytitulo">INTERPESSOAL</h1>
@@ -129,9 +129,9 @@
         <footer>
             <h1 id="contatote">CONTATO</h1>
             <img class="logos"
-            src="/IMG/bolha-de-bate-papo.png"><a href="#"> <div id="cor">(11) 93097-0865</div> </a><br/>
-            <img class="logos" src="/IMG/gmail.png"><a href="#"><div id="cor"></div>matheusasfbr@gmail.com</div></a><br/>
-            <img class="logos" src="/IMG/instagram.png"><a href="#"><div id="cor"></div>@matheusasfbr</div></a><br/>
+            src="./IMG/bolha-de-bate-papo.png"><a href="#"> <div id="cor">(11) 93097-0865</div> </a><br/>
+            <img class="logos" src="./IMG/gmail.png"><a href="#"><div id="cor"></div>matheusasfbr@gmail.com</div></a><br/>
+            <img class="logos" src="./IMG/instagram.png"><a href="#"><div id="cor"></div>@matheusasfbr</div></a><br/>
             <div id="reg"> Todos os direitos reservados &reg;</div>
         </footer>
     </main>
